fixing the height

--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,6 @@
     @apply font-semibold border-b-[1px] border-slate-200 pb-2 mb-2;
   }
   main {
-    height: 100vh;
+    min-height: 100vh;
   }
 }
